--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -11,6 +11,7 @@
 <p>What is the longest word you can find?</p>
 <form action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input type="text" name="play">
+  <input type="hidden" name="letters" value "<%= @letters.join %>">
+  <input type="text" name="word">
   <input type="submit" value="Play">
 </form>
